--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular-calendar": "^0.23.7",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
