--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "angular-calendar": "^0.23.7",
+    "angular2-social-login": "^3.1.1",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
@@ -31,6 +32,7 @@
     "mongodb": "^3.0.1",
     "ng-drag-drop": "^4.0.0",
     "ng2-charts": "^1.6.0",
+    "ngx-contextmenu": "^4.1.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
