--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "ng-drag-drop": "^4.0.0",
     "ng2-charts": "^1.6.0",
     "ngx-contextmenu": "^4.1.2",
+    "request": "^2.86.0",
+    "request-promise-native": "^1.0.5",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
